Fixed the stupid dark mode feature

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -52,7 +52,3 @@ html {
       transform: rotate(360deg);
     }
 }
-
-.logo {
-    border: 2px solid red;
-}
